# ApprovalsExample

./: .gitignore  CMakeLists.txt  LICENSE  approvals-example.sublime-project  build-and-test.sh
HomeAutomation/: CMakeLists.txt
HomeAutomation/inc/app/: LightScheduler.h
HomeAutomation/inc/devices/: BlindsScheduler.h  HorizontalBlinds.h  LightSwitch.h  NullHorizontalBlinds.h  VerticalBlinds.h
HomeAutomation/inc/util/: RandomMinuteGenerator.h  logger.h
HomeAutomation/os/inc/: TimeService.h
HomeAutomation/os/src/: AcmeTimeService.cpp  TimeService.cpp
HomeAutomation/os/util/: AcmeTimeService.h
HomeAutomation/src/: CMakeLists.txt
HomeAutomation/src/app/: LightScheduler.cpp  globals.cpp
HomeAutomation/src/devices/: BlindsScheduler.cpp  HorizontalBlinds.cpp  LightSwitch.cpp  VerticalBlinds.cpp
HomeAutomation/src/util/: RandomMinuteGenerator.cpp
HomeAutomation/tests/: CMakeLists.txt  LightSchedulerTests.Light_Scheduler_Test.approved.txt  LightSchedulerTests.cpp  fakes-c.c  fakes-cpp.cpp
